--- a/Linear Regression/main.ipynb
+++ b/Linear Regression/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "51944188-c61d-4a9e-bae0-b9b6bb1b1c73",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "fcac01f0-2025-4b7c-9022-babaa4c7b20a",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "49021fa8-f9b1-4892-b476-8f27cc10fd0f",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "61021015-e58d-4f30-9d0f-e2d3c07b9150",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "[5 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "76cd2d98-5355-4756-8bef-24cea762263d",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "8759006c-3ead-4d7a-8e74-d3e617908c4f",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "(545,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "f041f756-ecde-47ca-9eda-a36a83bcb062",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "10582c6f-a2a2-4299-8374-e3860c6d475e",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "(545, 1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "154f3e53-f7d8-472b-9bf8-5b9c004fe8b9",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "0cde22e8-96b2-4104-9185-ba572432bd79",
    "metadata": {},
    "outputs": [
@@ -299,13 +299,52 @@
        "(545,)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y.shape # in sklearn linear model acceps target vairalb as 1 dim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc45740-8aea-4b21-8c5b-aece42a86b5b",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8de03950-a67c-4d3f-80b1-7e4a1d9f3cae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9e41e639-faf7-493a-a40e-b0f1aa9ca575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xdata = sc.fit_transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ba76b9f0-7691-446d-8ca1-4402b253c732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ydata = sc.fit_transform(y.values.reshape(-1, 1)).ravel()"
    ]
   },
   {
@@ -318,17 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "6c4fbd1f-dba7-48df-a1a1-edeac99ef68c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=0) # herea random state help to give same result of split when ever run the code"
+    "x_train, x_test, y_train, y_test = train_test_split(xdata, ydata, random_state=0) # herea random state help to give same result of split when ever run the code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "137e26bc-d8d9-4822-a480-1295351fd6f1",
    "metadata": {},
    "outputs": [
@@ -338,7 +377,7 @@
        "(408, 408, 137, 137)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "0368beae-d4cb-42a5-8739-62040fee466a",
    "metadata": {},
    "outputs": [],
@@ -369,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "2a696974-c543-4c50-87ae-9615ed8dff3a",
    "metadata": {},
    "outputs": [
@@ -961,7 +1000,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,17 +1011,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "aba15738-0768-4c8d-a585-13cceeae2875",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([495.66750946])"
+       "array([0.57508854])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,17 +1032,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "a9b13f58-5861-4210-a717-0552662a53c2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(2277637.2583662723)"
+       "np.float64(0.03417520272867991)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "83511922-6778-45ce-b684-40128fd84a07",
    "metadata": {},
    "outputs": [],
@@ -1032,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "b293d87f-900d-48cb-899b-e50c08d7a984",
    "metadata": {},
    "outputs": [],
@@ -1042,17 +1081,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "3d0b12d2-6447-433f-9763-c10f2e8ce166",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3237329256541952"
+       "0.3237329256541951"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
